@@ -91,6 +91,83 @@ let _ = Callback.register_exception "Unix.Unix_error"
 
 external error_message : error -> string = "unix_error_message"
 
+let () =
+  Printexc.register_printer
+    (function
+      | Unix_error (e, s, s') ->
+	  let msg = match e with
+	  | E2BIG -> "E2BIG"
+	  | EACCES -> "EACCES"
+	  | EAGAIN -> "EAGAIN"
+	  | EBADF -> "EBADF"
+	  | EBUSY -> "EBUSY"
+	  | ECHILD -> "ECHILD"
+	  | EDEADLK -> "EDEADLK"
+	  | EDOM -> "EDOM"
+	  | EEXIST -> "EEXIST"
+	  | EFAULT -> "EFAULT"
+	  | EFBIG -> "EFBIG"
+	  | EINTR -> "EINTR"
+	  | EINVAL -> "EINVAL"
+	  | EIO -> "EIO"
+	  | EISDIR -> "EISDIR"
+	  | EMFILE -> "EMFILE"
+	  | EMLINK -> "EMLINK"
+	  | ENAMETOOLONG -> "ENAMETOOLONG"
+	  | ENFILE -> "ENFILE"
+	  | ENODEV -> "ENODEV"
+	  | ENOENT -> "ENOENT"
+	  | ENOEXEC -> "ENOEXEC"
+	  | ENOLCK -> "ENOLCK"
+	  | ENOMEM -> "ENOMEM"
+	  | ENOSPC -> "ENOSPC"
+	  | ENOSYS -> "ENOSYS"
+	  | ENOTDIR -> "ENOTDIR"
+	  | ENOTEMPTY -> "ENOTEMPTY"
+	  | ENOTTY -> "ENOTTY"
+	  | ENXIO -> "ENXIO"
+	  | EPERM -> "EPERM"
+	  | EPIPE -> "EPIPE"
+	  | ERANGE -> "ERANGE"
+	  | EROFS -> "EROFS"
+	  | ESPIPE -> "ESPIPE"
+	  | ESRCH -> "ESRCH"
+	  | EXDEV -> "EXDEV"
+	  | EWOULDBLOCK -> "EWOULDBLOCK"
+	  | EINPROGRESS -> "EINPROGRESS"
+	  | EALREADY -> "EALREADY"
+	  | ENOTSOCK -> "ENOTSOCK"
+	  | EDESTADDRREQ -> "EDESTADDRREQ"
+	  | EMSGSIZE -> "EMSGSIZE"
+	  | EPROTOTYPE -> "EPROTOTYPE"
+	  | ENOPROTOOPT -> "ENOPROTOOPT"
+	  | EPROTONOSUPPORT -> "EPROTONOSUPPORT"
+	  | ESOCKTNOSUPPORT -> "ESOCKTNOSUPPORT"
+	  | EOPNOTSUPP -> "EOPNOTSUPP"
+	  | EPFNOSUPPORT -> "EPFNOSUPPORT"
+	  | EAFNOSUPPORT -> "EAFNOSUPPORT"
+	  | EADDRINUSE -> "EADDRINUSE"
+	  | EADDRNOTAVAIL -> "EADDRNOTAVAIL"
+	  | ENETDOWN -> "ENETDOWN"
+	  | ENETUNREACH -> "ENETUNREACH"
+	  | ENETRESET -> "ENETRESET"
+	  | ECONNABORTED -> "ECONNABORTED"
+	  | ECONNRESET -> "ECONNRESET"
+	  | ENOBUFS -> "ENOBUFS"
+	  | EISCONN -> "EISCONN"
+	  | ENOTCONN -> "ENOTCONN"
+	  | ESHUTDOWN -> "ESHUTDOWN"
+	  | ETOOMANYREFS -> "ETOOMANYREFS"
+	  | ETIMEDOUT -> "ETIMEDOUT"
+	  | ECONNREFUSED -> "ECONNREFUSED"
+	  | EHOSTDOWN -> "EHOSTDOWN"
+	  | EHOSTUNREACH -> "EHOSTUNREACH"
+	  | ELOOP -> "ELOOP"
+	  | EOVERFLOW -> "EOVERFLOW"
+	  | EUNKNOWNERR x -> Printf.sprintf "EUNKNOWNERR %d" x in
+	  Some (Printf.sprintf "Unix.Unix_error(Unix.%s, %S, %S)" msg s s')
+      | _ -> None)
+
 let handle_unix_error f arg =
   try
     f arg
